--- a/app/components/header.html
+++ b/app/components/header.html
@@ -5,12 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Bento</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-  <header>
-    header
+  <header class="header">
+    <div class="container">
+      <nav class="menu">
+        <a class="logo menu__logo" href="index.html">
+          <img class="logo__img" src="images/logo.svg" alt="logo">
+        </a>
+        <button class="menu__btn btn" type="button">
+          Order a consultation
+        </button>
+        <button class="menu__burger" type="button">
+          <span class="sr-only">open menu</span>
+        </button>
+      </nav>
+    </div>
   </header>
