--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,5 +1,12 @@
-<footer>
-  footer
+<footer class="footer">
+  <div class="container">
+    <div class="footer__inner">
+      <h2 class="footer__title">
+
+      </h2>
+      <a class="footer__logo" href="index.html"></a>
+    </div>
+  </div>
 </footer>
 
 <script src="js/main.min.js"></script>
