--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -54,6 +54,30 @@ body {
   border-radius: 30px;
 }
 
+.title {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.logo {
+  border-radius: 5px;
+  transition: opacity 0.5s ease, box-shadow 0.5s ease;
+
+  &:focus {
+    box-shadow: 0 0 0 2px rgba(#8F7E70, .5);
+  }
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.5;
+    box-shadow: none;
+  }
+}
+
 // header
 
 .header {
@@ -66,24 +90,6 @@ body {
   align-items: center;
   gap: 20px;
   flex-wrap: wrap;
-
-  &__logo {
-    border-radius: 5px;
-    transition: opacity 0.5s ease, box-shadow 0.5s ease;
-
-    &:focus {
-      box-shadow: 0 0 0 2px rgba(#8F7E70, .5);
-    }
-
-    &:hover {
-      opacity: 0.7;
-    }
-
-    &:active {
-      opacity: 0.5;
-      box-shadow: none;
-    }
-  }
 
   &__btn {
     margin: 0 160px 0 auto;
@@ -125,8 +131,53 @@ body {
   }
 }
 
+// 
+
 // footer
 
+.footer {
+  margin-bottom: 100px;
 
+  &__inner {
+    border-radius: 30px;
+    background-color: #8F7E70;
+    padding: 50px;
+  }
+
+  &__list {
+    display: flex;
+    gap: 10px 0;
+    flex-wrap: wrap;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.3;
+    margin-bottom: 35px;
+  }
+
+  &__item {
+    flex-basis: 50%;
+    align-self: start;
+    padding-right: 30px;
+  }
+
+  &__box {
+    display: flex;
+    align-items: center;
+    gap: 20px 10px;
+    flex-wrap: wrap;
+  }
+
+  &__logo {
+    width: 50%;
+
+    &:focus {
+      box-shadow: 0 0 0 2px rgba(#fff, .5);
+    }
+
+    &:active {
+      box-shadow: none;
+    }
+  }
+}
 
 @import 'media';
