--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,6 +26,10 @@ body {
   background-color: #000;
 }
 
+img {
+  object-fit: cover;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -319,52 +323,195 @@ body {
 
 .projects {
   margin-top: -50px;
-  margin-bottom: 80px;
+  margin-bottom: 75px;
 
   &__inner {
     background-image: url('../images/projects-bg.webp');
     background-repeat: no-repeat;
-    padding: 160px 85px 0 50px;
+    padding: 160px 0 0 0;
   }
 
-  &__name {}
+  &__name {
+    padding-left: 50px;
+    margin-bottom: 50px;
+  }
 
-  &__slider {}
+  &__slider {
+    margin-top: -150px;
+  }
 
-  &__slide {}
+  &__slide-inner {
+    padding-right: 85px;
+    padding-left: 50px;
+    padding-bottom: 7px;
+  }
 
-  &__title {}
+  &__title {
+    max-width: 440px;
+    text-align: right;
+    margin: 0 115px 50px auto;
+  }
 
-  &__box {}
+  &__box {
+    display: flex;
+    justify-content: space-between;
+    gap: 56px;
+  }
 
-  &__content {}
+  &__head {
+    font-weight: 700;
+    margin-bottom: 15px;
+  }
 
-  &__head {}
+  &__text {
+    max-width: 320px;
+    margin-bottom: 45px;
+  }
 
-  &__text {}
+  &__list {
+    display: flex;
+    gap: 10px;
+  }
 
-  &__list {}
+  &__item {
+    font-size: 20px;
+    font-weight: 700;
+    width: 120px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #3c342e;
+    text-transform: uppercase;
 
-  &__item {}
+    sup {
+      font-size: 12px;
+      margin-top: -6px;
+    }
 
-  &__img {}
+    &:last-child {
+      background-color: transparent;
+      background-image: url('../images/item-bg.webp');
+      background-position: bottom;
+      background-repeat: no-repeat;
+      height: 130px;
+      margin-top: -70px;
+      text-align: center;
+
+      span {
+        padding-top: 50px;
+      }
+    }
+  }
+
+  &__arrow {
+    width: 68px;
+    height: 40px;
+    border-radius: 30px;
+    background-color: #8f7e70;
+    position: absolute;
+    bottom: 0;
+    top: auto;
+    transition: opacity 0.5s ease;
+
+    &::after {
+      display: none;
+    }
+
+    &::before {
+      content: '';
+      width: 20px;
+      height: 20px;
+      background-image: url('../images/prev-arrow.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  &__prev {
+    right: 642px;
+    left: auto;
+  }
+
+  &__next {
+    right: 80px;
+    transform: scale(-1, 1);
+  }
 }
 
-.container {}
+// rates
 
-.name {}
+.rates {
+  margin-bottom: 75px;
+  text-align: center;
 
-.swiper {}
+  &__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  
+  &__item {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  &__title {
+    font-size: 40px;
+    font-weight: 700;
+    border-radius: 30px;
+    color: #fff;
+    background-color: #3C342E;
+    padding: 25px 15px;
+    margin-bottom: 20px;
+  }
+  
+  &__list {
+    border-radius: 30px;
+    background-color: #8F7E70;
+    margin-bottom: 20px;
+    padding: 55px 20px 44px;
+    list-style: disc;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: left;
+    align-content: center;
+    height: 100%;
 
-.swiper-wrapper {}
+    li {
+      max-width: 415px;
+      margin: 0 auto;
+    }
+  }
 
-.swiper-slide {}
+  &__box {
+    display: flex;
+  }
 
-.title {}
+  &__size {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 15px 65px;
+    border-radius: 30px;
+    background-color: #3C342E;
 
-.swiper-button-prev {}
-
-.swiper-button-next {}
+    sup {
+      font-size: 12px;
+      margin-top: -6px;
+    }
+  }
+}
 
 // footer
 
