added responsive design of sections rates, about & projects

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__inner">
-      <h2 class="title">
+      <h2 class="footer__title title">
         Contacts
       </h2>
       <dl class="footer__list">
