--- a/app/scss/media.scss
+++ b/app/scss/media.scss
@@ -107,6 +107,27 @@
       }
     }
   }
+
+  .gallery {
+
+    &__list {
+      grid-template-rows: 70px 205px 164px;
+    }
+
+    &__item {
+      &:nth-child(5) {
+        margin-top: 24px;
+      }
+
+      &:nth-child(6) {
+        margin-top: 83px;
+      }
+
+      &:nth-child(7) {
+        margin-top: 28px;
+      }
+    }
+  }
 }
 
 @media (max-width: 1020px) {
@@ -255,6 +276,27 @@
       font-size: 72px;
     }
   }
+
+  .gallery {
+    &__list {
+      grid-template-rows: 70px 138px 133px;
+      gap: 10px;
+    }
+
+    &__item {
+      &:nth-child(5) {
+        margin: 0;
+      }
+
+      &:nth-child(6) {
+        margin-top: 48px;
+      }
+
+      &:nth-child(7) {
+        margin-top: 5px;
+      }
+    }
+  }
 }
 
 @media (max-width: 920px) {
@@ -362,7 +404,7 @@
     &__item {
       font-size: 16px;
       height: 40px;
-      
+
       &:last-child {
         height: 40px;
       }
@@ -427,6 +469,24 @@
       padding: 18px 28px;
     }
   }
+
+  .gallery {
+    &__list {
+      grid-template-rows: 70px 38px 53px;
+    }
+
+    &__item {
+
+      &:nth-child(5),
+      &:nth-child(7) {
+        margin-top: -37px;
+      }
+
+      &:nth-child(6) {
+        margin-top: -16px;
+      }
+    }
+  }
 }
 
 @media (max-width: 560px) {
@@ -453,7 +513,8 @@
 
   .about,
   .projects,
-  .rates {
+  .rates,
+  .gallery {
     margin-bottom: 25px;
   }
 
@@ -476,9 +537,93 @@
   .footer {
     margin-bottom: 25px;
 
-    &__title{ 
+    &__title {
       font-size: 24px;
       margin-bottom: 15px;
+    }
+  }
+}
+
+@media (max-width: 420px) {
+  .gallery {
+    &__list {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: auto auto 126px 126px auto auto;
+      ;
+    }
+
+    &__item {
+      &:first-child {
+        grid-column: 1 / 4;
+        grid-row: 1 / 3;
+      }
+
+      &:nth-child(2) {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+      }
+
+      &:nth-child(3) {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+
+        img {
+          height: 100%;
+          border-radius: 30px;
+        }
+      }
+
+      &:nth-child(4) {
+        grid-column: 3 / 4;
+        grid-row: 3 / 6;
+
+        img {
+          height: 100%;
+          border-radius: 30px;
+        }
+      }
+
+      &:nth-child(5) {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+      }
+
+      &:nth-child(6) {
+        grid-column: 2 / 3;
+        grid-row: 4 / 5;
+        margin-top: 0;
+      }
+
+      &:nth-child(7) {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+        margin-top: 0;
+        margin-top: -2px;
+      }
+
+      &:nth-child(8) {
+        grid-column: 1 / 4;
+        grid-row: 6 / 7;
+        align-self: end;
+      }
+
+      &:nth-child(9) {
+        grid-column: 2 / 3;
+        grid-row: 5 / 6;
+        align-self: auto;
+        padding-top: 30px;
+
+        img {
+          height: 100%;
+          border-radius: 30px;
+        }
+      }
+
+      &:last-child {
+        grid-column: 1 / 2;
+        grid-row: 5 / 6;
+        align-self: end;
+      }
     }
   }
 }
