--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -457,12 +457,12 @@ img {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
-  
+
   &__item {
     display: flex;
     flex-direction: column;
   }
-  
+
   &__title {
     font-size: 40px;
     font-weight: 700;
@@ -472,7 +472,7 @@ img {
     padding: 25px 15px;
     margin-bottom: 20px;
   }
-  
+
   &__list {
     border-radius: 30px;
     background-color: #8F7E70;
@@ -510,6 +510,80 @@ img {
       font-size: 12px;
       margin-top: -6px;
     }
+  }
+}
+
+// gallery
+
+.gallery {
+  margin-bottom: 50px;
+
+  &__list {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 120px 245px 186px;
+    gap: 10px 20px;
+  }
+
+  &__item {
+    &:first-child {
+      grid-column: 1 / 3;
+      grid-row: 1 / 3;
+    }
+
+    &:nth-child(2) {
+      grid-column: 3 / 4;
+      grid-row: 1 / 2;
+    }
+
+    &:nth-child(3) {
+      grid-column: 4 / 5;
+      grid-row: 1 / 2;
+    }
+
+    &:nth-child(4) {
+      grid-column: 5 / 6;
+      grid-row: 1 / 4;
+    }
+
+    &:nth-child(5) {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+    }
+
+    &:nth-child(6) {
+      grid-column: 3 / 4;
+      grid-row: 2 / 3;
+      margin-top: 73px;
+    }
+
+    &:nth-child(7) {
+      grid-column: 4 / 5;
+      grid-row: 2 / 3;
+      margin-top: 4px;
+    }
+
+    &:nth-child(8) {
+      grid-column: 1 / 3;
+      grid-row: 3 / 4;
+      align-self: end;
+    }
+
+    &:nth-child(9) {
+      grid-column: 3 / 4;
+      grid-row: 3 / 4;
+      align-self: end;
+    }
+
+    &:last-child {
+      grid-column: 4 / 5;
+      grid-row: 3 / 4;
+      align-self: end;
+    }
+  }
+
+  &__img {
+    width: 100%;
   }
 }
 
